--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
   </head>
 
   <body>
+
+    <!--Header-->
     <header class="jumbotron jumbotron-fluid custom-jumbotron">
       <h1 class="display-2">Schedule and beTimely</h1><br>
       <p class="lead">Easy to use app -</p><br><br> <p class="lead2">so that you can say 'YES', iAmTimely</p><br>
       <p id="now" class="lead"></p>
     </header>
     <div class="container">
-        <!-- Timeblocks go here -->
+
+        <!-- Schuler Time Blocks -->
         <div id='1' class="row clock">
             <div class="col-sm-1 hour">EARLY</div>
             <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
@@ -279,6 +282,8 @@
       </div>
 
     </body>
+
+    <!--Scripts-->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
