--- a/index.html
+++ b/index.html
@@ -35,248 +35,248 @@
 
         <!-- Schuler Time Blocks -->
         <div id='1' class="row clock">
-            <div class="col-sm-1 hour">EARLY</div>
+            <div id="point1" class="col-sm-1 hour">EARLY</div>
             <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done1" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='7' class="row clock">
-            <div class="col-sm-1 hour">07:00</div>
+            <div id="point2" class="col-sm-1 hour">07:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done2" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='7.5' class="row clock">
-            <div class="col-sm-1 hour">07:30</div>
+            <div id="point3" class="col-sm-1 hour">07:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done3" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='8' class="row clock">
-            <div class="col-sm-1 hour">08:00</div>
+            <div id="point4" class="col-sm-1 hour">08:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done4" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='8.5' class="row clock">
-            <div class="col-sm-1 hour">08:30</div>
+            <div id="point5" class="col-sm-1 hour">08:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done5" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='9' class="row clock">
-          <div class="col-sm-1 hour">09:00</div>
+          <div id="point6" class="col-sm-1 hour">09:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done6" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='9.5' class="row clock">
-            <div class="col-sm-1 hour">09:30</div>
+            <div id="point7" class="col-sm-1 hour">09:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done7" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="10" class="row clock">
-          <div class="col-sm-1 hour">10:00</div>
+          <div id="point8" class="col-sm-1 hour">10:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done8" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="10.5" class="row clock">
-            <div class="col-sm-1 hour">10.30</div>
+            <div id="point9" class="col-sm-1 hour">10.30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done9" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id="11" class="row clock">
-          <div class="col-sm-1 hour">11:00</div>
+          <div id="point10" class="col-sm-1 hour">11:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done10" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="11.5" class="row clock">
-            <div class="col-sm-1 hour">11:30</div>
+            <div id="point11" class="col-sm-1 hour">11:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done11" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id='12' class="row clock">
-          <div class="col-sm-1 hour">12:00</div>
+          <div id="point12" class="col-sm-1 hour">12:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done12" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='12.5' class="row clock">
-            <div class="col-sm-1 hour">12:30</div>
+            <div id="point13" class="col-sm-1 hour">12:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done13" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id="13" class="row clock">
-          <div class="col-sm-1 hour">13:00</div>
+          <div id="point14" class="col-sm-1 hour">13:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done14" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="13.5" class="row clock">
-            <div class="col-sm-1 hour">13:30</div>
+            <div id="point15" class="col-sm-1 hour">13:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done15" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id="14" class="row clock">
-          <div class="col-sm-1 hour">14:00</div>
+          <div id="point16" class="col-sm-1 hour">14:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done16" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="14.5" class="row clock">
-            <div class="col-sm-1 hour">14:30</div>
+            <div id="point17" class="col-sm-1 hour">14:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done17" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id="15" class="row clock">
-          <div class="col-sm-1 hour">15:00</div>
+          <div id="point18" class="col-sm-1 hour">15:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done18" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id="15.5" class="row clock">
-            <div class="col-sm-1 hour">15:30</div>
+            <div id="point19" class="col-sm-1 hour">15:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done19" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id='16' class="row clock">
-          <div class="col-sm-1 hour">16:00</div>
+          <div id="point20" class="col-sm-1 hour">16:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done20" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='16.5' class="row clock">
-            <div class="col-sm-1 hour">16:30</div>
+            <div id="point21" class="col-sm-1 hour">16:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done21" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
         <div id='17' class="row clock">
-          <div class="col-sm-1 hour">17:00</div>
+          <div id="point22" class="col-sm-1 hour">17:00</div>
           <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done22" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
         <div id='17.5' class="row clock">
-            <div class="col-sm-1 hour">17:30</div>
+            <div id="point23" class="col-sm-1 hour">17:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done23" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
           <div id='18' class="row clock">
-            <div class="col-sm-1 hour">18:00</div>
+            <div id="point24" class="col-sm-1 hour">18:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done24" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
           <div id='18.5' class="row clock">
-            <div class="col-sm-1 hour">18:30</div>
+            <div id="point25" class="col-sm-1 hour">18:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done25" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='19' class="row clock">
-            <div class="col-sm-1 hour">19:00</div>
+            <div id="point26" class="col-sm-1 hour">19:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done26" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='19.5' class="row clock">
-            <div class="col-sm-1 hour">19:30</div>
+            <div id="point27" class="col-sm-1 hour">19:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done27" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='20' class="row clock">
-            <div class="col-sm-1 hour">20:00</div>
+            <div id="point28" class="col-sm-1 hour">20:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done28" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='20.5' class="row clock">
-            <div class="col-sm-1 hour">20:30</div>
+            <div id="point29" class="col-sm-1 hour">20:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done29" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='21' class="row clock">
-            <div class="col-sm-1 hour">21:00</div>
+            <div id="point30" class="col-sm-1 hour">21:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done30" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='21.5' class="row clock">
-            <div class="col-sm-1 hour">21:30</div>
+            <div id="point31" class="col-sm-1 hour">21:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done31" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='22' class="row clock">
-            <div class="col-sm-1 hour">22:00</div>
+            <div id="point32" class="col-sm-1 hour">22:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done32" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='22.5' class="row clock">
-            <div class="col-sm-1 hour">22:30</div>
+            <div id="point33" class="col-sm-1 hour">22:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done33" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='23' class="row clock">
-            <div class="col-sm-1 hour">23:00</div>
+            <div id="point34" class="col-sm-1 hour">23:00</div>
             <textarea class="col-sm-8 taskDue2"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done34" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
             <div id='23.5' class="row clock">
-            <div class="col-sm-1 hour">23:30</div>
+            <div id="point35" class="col-sm-1 hour">23:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
-            <button class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+            <button id="done35" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
       </div>
