done buttons updated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button id="done2" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='7.5' class="row clock">
+        <div id='7a' class="row clock">
             <div id="point3" class="col-sm-1 hour">07:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -62,7 +62,7 @@
             <button id="done4" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='8.5' class="row clock">
+        <div id='8a' class="row clock">
             <div id="point5" class="col-sm-1 hour">08:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -76,7 +76,7 @@
             <button id="done6" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='9.5' class="row clock">
+        <div id='9a' class="row clock">
             <div id="point7" class="col-sm-1 hour">09:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -90,7 +90,7 @@
             <button id="done8" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id="10.5" class="row clock">
+        <div id="10a" class="row clock">
             <div id="point9" class="col-sm-1 hour">10.30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -104,7 +104,7 @@
             <button id="done10" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id="11.5" class="row clock">
+        <div id="11a" class="row clock">
             <div id="point11" class="col-sm-1 hour">11:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -118,7 +118,7 @@
             <button id="done12" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='12.5' class="row clock">
+        <div id='12a' class="row clock">
             <div id="point13" class="col-sm-1 hour">12:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -132,7 +132,7 @@
             <button id="done14" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id="13.5" class="row clock">
+        <div id="13a" class="row clock">
             <div id="point15" class="col-sm-1 hour">13:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -146,7 +146,7 @@
             <button id="done16" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id="14.5" class="row clock">
+        <div id="14a" class="row clock">
             <div id="point17" class="col-sm-1 hour">14:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -160,7 +160,7 @@
             <button id="done18" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id="15.5" class="row clock">
+        <div id="15a" class="row clock">
             <div id="point19" class="col-sm-1 hour">15:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -174,7 +174,7 @@
             <button id="done20" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='16.5' class="row clock">
+        <div id='16a' class="row clock">
             <div id="point21" class="col-sm-1 hour">16:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -188,7 +188,7 @@
             <button id="done22" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
 
-        <div id='17.5' class="row clock">
+        <div id='17a' class="row clock">
             <div id="point23" class="col-sm-1 hour">17:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -202,7 +202,7 @@
             <button id="done24" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
 
-          <div id='18.5' class="row clock">
+          <div id='18a' class="row clock">
             <div id="point25" class="col-sm-1 hour">18:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -216,7 +216,7 @@
             <button id="done26" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
-            <div id='19.5' class="row clock">
+            <div id='19a' class="row clock">
             <div id="point27" class="col-sm-1 hour">19:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -230,7 +230,7 @@
             <button id="done28" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
-            <div id='20.5' class="row clock">
+            <div id='20a' class="row clock">
             <div id="point29" class="col-sm-1 hour">20:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -244,7 +244,7 @@
             <button id="done30" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
-            <div id='21.5' class="row clock">
+            <div id='21a' class="row clock">
             <div id="point31" class="col-sm-1 hour">21:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -258,7 +258,7 @@
             <button id="done32" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
-            <div id='22.5' class="row clock">
+            <div id='22a' class="row clock">
             <div id="point33" class="col-sm-1 hour">22:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
@@ -272,7 +272,7 @@
             <button id="done34" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
 
-            <div id='23.5' class="row clock">
+            <div id='23a' class="row clock">
             <div id="point35" class="col-sm-1 hour">23:30</div>
             <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
