done buttons updated

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <p id="now" class="lead"></p>
     </header>
     <div class="container">
-
-        <!-- Schuler Time Blocks -->
+  
+        <!-- Scheduler Time Blocks -->
         <div id='1' class="row clock">
             <div id="point1" class="col-sm-1 hour">EARLY</div>
             <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
@@ -43,7 +43,7 @@
 
         <div id='7' class="row clock">
             <div id="point2" class="col-sm-1 hour">07:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done2" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -57,7 +57,7 @@
 
         <div id='8' class="row clock">
             <div id="point4" class="col-sm-1 hour">08:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done4" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -71,7 +71,7 @@
 
         <div id='9' class="row clock">
           <div id="point6" class="col-sm-1 hour">09:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done6" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -85,7 +85,7 @@
 
         <div id="10" class="row clock">
           <div id="point8" class="col-sm-1 hour">10:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done8" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -99,7 +99,7 @@
 
         <div id="11" class="row clock">
           <div id="point10" class="col-sm-1 hour">11:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done10" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -113,7 +113,7 @@
 
         <div id='12' class="row clock">
           <div id="point12" class="col-sm-1 hour">12:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done12" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -127,7 +127,7 @@
 
         <div id="13" class="row clock">
           <div id="point14" class="col-sm-1 hour">13:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done14" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -141,7 +141,7 @@
 
         <div id="14" class="row clock">
           <div id="point16" class="col-sm-1 hour">14:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done16" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -155,7 +155,7 @@
 
         <div id="15" class="row clock">
           <div id="point18" class="col-sm-1 hour">15:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done18" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -169,7 +169,7 @@
 
         <div id='16' class="row clock">
           <div id="point20" class="col-sm-1 hour">16:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done20" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -183,7 +183,7 @@
 
         <div id='17' class="row clock">
           <div id="point22" class="col-sm-1 hour">17:00</div>
-          <textarea class="col-sm-8 taskDue2"></textarea>
+          <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done22" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
@@ -197,7 +197,7 @@
 
           <div id='18' class="row clock">
             <div id="point24" class="col-sm-1 hour">18:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done24" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
           </div>
@@ -211,7 +211,7 @@
 
             <div id='19' class="row clock">
             <div id="point26" class="col-sm-1 hour">19:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done26" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
@@ -225,7 +225,7 @@
 
             <div id='20' class="row clock">
             <div id="point28" class="col-sm-1 hour">20:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done28" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
@@ -239,7 +239,7 @@
 
             <div id='21' class="row clock">
             <div id="point30" class="col-sm-1 hour">21:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done30" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
@@ -253,7 +253,7 @@
 
             <div id='22' class="row clock">
             <div id="point32" class="col-sm-1 hour">22:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done32" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
@@ -267,7 +267,7 @@
 
             <div id='23' class="row clock">
             <div id="point34" class="col-sm-1 hour">23:00</div>
-            <textarea class="col-sm-8 taskDue2"></textarea>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done34" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
             </div>
