added times and changed boxes

--- a/index.html
+++ b/index.html
@@ -34,12 +34,54 @@
     <div class="container">
   
         <!-- Scheduler Time Blocks -->
-        <div id='1' class="row clock">
-            <div id="point1" class="col-sm-1 hour">EARLY</div>
-            <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
+        <div id='00' class="row clock">
+            <div id="point1" class="col-sm-1 hour">00:00</div>
+            <textarea class="col-sm-8 taskDue"></textarea>
             <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
             <button id="done1" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
         </div>
+
+        <div id='01' class="row clock">
+          <div id="pointa" class="col-sm-1 hour">01:00</div>
+          <textarea class="col-sm-8 taskDue"></textarea>
+          <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+          <button id="donea" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+      </div>
+
+      <div id='02' class="row clock">
+        <div id="pointb" class="col-sm-1 hour">02:00</div>
+        <textarea class="col-sm-8 taskDue"></textarea>
+        <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+        <button id="doneb" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+    </div>
+
+    <div id='03' class="row clock">
+      <div id="pointc" class="col-sm-1 hour">03:00</div>
+      <textarea class="col-sm-8 taskDue"></textarea>
+      <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+      <button id="donec" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+  </div>
+
+  <div id='04' class="row clock">
+    <div id="pointd" class="col-sm-1 hour">04:00</div>
+    <textarea class="col-sm-8 taskDue"></textarea>
+    <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+    <button id="doned" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+</div>
+
+<div id='05' class="row clock">
+  <div id="pointe" class="col-sm-1 hour">05:00</div>
+  <textarea class="col-sm-8 taskDue"></textarea>
+  <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+  <button id="donee" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+</div>
+
+  <div id='06' class="row clock">
+    <div id="pointf" class="col-sm-1 hour">06:00</div>
+    <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
+    <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
+    <button id="donef" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
+</div>
 
         <div id='7' class="row clock">
             <div id="point2" class="col-sm-1 hour">07:00</div>
